feat(mobile): split plans and organizing navigation
